Upgrade to Kotlin 1.6.0 and allow to create apps with it and JDK 17