@@ -63,35 +63,6 @@ class GradleSpec extends BeanContextSpec implements CommandOutputFixture {
         buildGradle.contains("tasks")
     }
 
-    @PendingFeature(reason = "Kotlin JDK17 Compatibility")
-    @Unroll
-    @Issue('https://github.com/micronaut-projects/micronaut-starter/issues/774')
-    void 'Workaround for Kotlin projects with Gradle and JDK16'() {
-        when:
-        def output = generate(ApplicationType.DEFAULT, new Options(Language.KOTLIN, TestFramework.JUNIT, BuildTool.GRADLE, JdkVersion.JDK_17))
-        def properties = output["gradle.properties"]
-
-        then:
-        properties
-        properties.contains("org.gradle.jvmargs=--illegal-access=permit")
-
-        when:
-        output = generate(ApplicationType.DEFAULT, new Options(Language.KOTLIN, TestFramework.JUNIT, BuildTool.GRADLE, JdkVersion.JDK_11))
-        properties = output["gradle.properties"]
-
-        then:
-        properties
-        !properties.contains("org.gradle.jvmargs=--illegal-access=permit")
-
-        when:
-        output = generate(ApplicationType.DEFAULT, new Options(Language.JAVA, TestFramework.JUNIT, BuildTool.GRADLE, JdkVersion.JDK_17))
-        properties = output["gradle.properties"]
-
-        then:
-        properties
-        !properties.contains("org.gradle.jvmargs=--illegal-access=permit")
-    }
-
     void 'disable Gradle Toolchain by default (language=#language)'() {
         when:
         def output = generate(ApplicationType.DEFAULT, new Options(language, BuildTool.GRADLE))
